# otp-encryption-suite

./: DEPLOYMENT.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  install.bat  install.sh  otp.py  otp_gui.py  pyproject.toml  requirements.txt
decrypted/: decrypted2.txt
encrypted/: encrypted.txt  encrypted_data1.txt  encrypted_data2.txt  encrypted_data3.txt  encrypted_data4.txt  encrypted_data5.txt  encrypted_data6.txt  encrypted_data7.txt
keys/: key_hash.txt  key_hash1.txt  key_hash2.txt  key_hash3.txt  key_hash4.txt  key_hash5.txt  key_hash6.txt  key_hash7.txt
log/: activity_log.txt
otp_encryption_suite/: __init__.py  cli.py  core.py
otp_encryption_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
